# transfers

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DRIVE_INTEGRATION_WIP.md  Makefile  Procfile  README.md  SECURITY.md  compose.yaml  docs.md
src/backend/: .pylintrc  Dockerfile  README.md  conftest.py  entrypoint  gunicorn.conf.py  manage.py  pyproject.toml  worker.py
src/backend/core/: admin.py  apps.py  enums.py  factories.py  forms.py  metrics.py  middlewares.py  models.py  signals.py  tasks.py  urls.py  utils.py
src/backend/core/ai/: ai_prompts.json  call_label.py  thread_classifier.py  thread_summarizer.py  utils.py
src/backend/core/api/: __init__.py  fields.py  filters.py  openapi.json  permissions.py  serializers.py  utils.py
src/backend/core/api/viewsets/: __init__.py  blob.py  channel.py  config.py  contacts.py  download.py  draft.py  drive.py  entitlements.py  flag.py  image_proxy.py  import_message.py  label.py  mailbox.py  mailbox_access.py  maildomain.py  maildomain_access.py  message.py  message_template.py  metrics.py  mixins.py  placeholder.py  provisioning.py  send.py  task.py  thread.py  thread_access.py  thread_event.py  thread_user.py  transfer.py  user.py  webhook.py
src/backend/core/authentication/: __init__.py  backends.py  dev_bypass.py  dev_claims_middleware.py  urls.py  views.py
src/backend/core/entitlements/: __init__.py  factory.py
src/backend/core/entitlements/backends/: base.py  deploycenter.py  local.py  static.py
src/backend/core/management/commands/: bucket_cors.py  clean_orphan_s3_objects.py  create_bucket.py  createsuperuser.py  delete_orphan_attachments.py  dns_check.py  dns_provision.py  drop_all_tables.py  identity.py  print_sessions.py  print_users.py  run_task.py  search_index_create.py  search_index_delete.py  search_reindex.py  seed_transfers.py  selfcheck.py  send_mail.py
src/backend/core/mda/: __init__.py  autoreply.py  draft.py  inbound.py  inbound_create.py  inbound_tasks.py  outbound.py  outbound_direct.py  outbound_tasks.py  selfcheck.py  selfcheck_reporting.py  signing.py  smtp.py
src/backend/core/mda/rfc5322/: README.md  __init__.py  composer.py  parser.py  utils.py
src/backend/core/migrations/: 0001_initial.py  0002_mailbox_is_identity.py  0002_transfer_notifications_completed_at.py  0002_transferevent_transfer_transferfile.py  0002_transferevent_transfer_transferfile_and_more.py  0003_thread_summary.py  0003_transfer_auto_archive_on_download_and_more.py  0003_transferfile_upload_completed_at_and_more.py  0003_user_claims.py  0004_alter_maildomain_custom_attributes_and_more.py  0004_alter_user_sub.py  0004_transfer_password_hash.py  0004_transferfile_scan_fields.py  0005_alter_transferfile_scan_status.py  0005_label_description_label_is_auto_and_more.py  0005_transfer_upload_completed_at.py  0005_transferfile_scan_fields.py  0006_alter_transferfile_scan_status.py  0006_e2e_encryption_fields.py  0006_mailboxaccess_accessed_at_alter_message_draft_blob.py  0006_transfer_sharing_mode_and_recipient.py  0007_blob_size_compressed.py  0007_remove_transfer_files_deleted_at_and_more.py  0007_transferfile_scan_error_kind.py  0008_channel_message_channel_channel_channel_has_target.py  0008_remove_transfer_password_hash.py  0009_alter_transferfile_transfer_transferdraft_and_more.py  0009_messagetemplate_blob_maildomain_alter_blob_mailbox_and_more.py  0010_remove_transfer_upload_completed_at_and_more.py  0010_thread_has_archived_alter_user_language.py  0011_alter_messagetemplate_type.py  0011_transferfile_source_url.py  0012_maildomain_custom_settings_alter_user_language_and_more.py  0012_remove_transfer_sensitive.py  0013_rename_revoke_to_deactivate.py  0013_thread_is_trashed.py  0014_alter_transfer_title.py  0014_messagetemplate_is_default_and_more.py  0014_transfer_auto_archive_on_download_and_more.py  0015_attachment_cid.py  (+8 more)
src/backend/core/services/: ai_service.py  email.py  s3.py  s3_sweep.py  throttle.py
src/backend/core/services/dns/: check.py  provisioning.py  tasks.py
src/backend/core/services/exporter/: __init__.py  tasks.py
src/backend/core/services/identity/: keycloak.py
src/backend/core/services/importer/: eml_tasks.py  imap.py  imap_tasks.py  labels.py  mbox_tasks.py  pst.py  pst_tasks.py  s3_seekable.py  service.py
src/backend/core/services/search/: __init__.py  index.py  mapping.py  parse.py  search.py  tasks.py
src/backend/core/templatetags/: extra_tags.py  humanize_size.py
src/backend/core/tests/: _s3_live.py  conftest.py  test_api_config.py  test_api_downloads.py  test_api_drafts.py  test_api_entitlements.py  test_api_entitlements_deploycenter.py  test_api_transfers.py  test_api_webhook.py  test_clean_orphan_s3_command.py  test_middlewares.py  test_models.py  test_s3_cleanup_drafts.py  test_s3_cleanup_structural.py  test_s3_cleanup_tasks.py  test_s3_cleanup_transfer.py  test_s3_content_disposition.py  test_s3_live_smoke.py  test_settings.py  test_signals.py  test_worker.py
src/backend/core/tests/api/: conftest.py  test_admin_maildomains_create.py  test_admin_maildomains_dns_check.py  test_admin_maildomains_list.py  test_admin_maildomains_mailbox.py  test_admin_maildomains_message_template.py  test_attachments.py  test_autoreply.py  test_channels.py  test_config.py  test_contacts.py  test_draft_attachments.py  test_draft_message_signature.py  test_drive.py  test_image_proxy.py  test_import_file_upload.py  test_inbound_mta.py  test_inbound_widget.py  test_labels.py  test_mailbox_access.py  test_mailbox_message_template.py  test_mailbox_usage_metrics.py  test_mailboxes.py  (+29 more)
src/backend/e2e/: __init__.py  apps.py
src/backend/messages/: __init__.py  celery_app.py  settings.py  urls.py  wsgi.py
src/backend/transferts/: __init__.py  celery_app.py  settings.py  urls.py  wsgi.py
src/mta-in/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
src/mta-in/etc/: localmap  main.cf  master.cf  openssl.cnf
src/mta-in/src/: delivery_milter.py
src/mta-in/src/api/: mda.py
src/mta-in/tests/: conftest.py  test_attachments.py  test_email_delivery.py  test_smtp_protocol.py
(+578 files in other folders)
